--- a/about/index.html
+++ b/about/index.html
@@ -1,41 +1,103 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <link rel="manifest" href="../site.webmanifest" />
+    <link rel="apple-touch-icon" href="../icon.png" />
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+    <meta name="theme-color" content="#fafafa" />
+    <title></title>
+  </head>
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+  <body>
+    <!-- Add your site or application content here -->
+    <header>
+      <div>
+        <a href="#"> <img src="" alt="unplugged logo" /></a>
+        <div class="header-divider"></div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero-area">
+        <div class="content-wrapper">
+          <h1>Retreat from the desk, return refreshed.</h1>
 
-<body>
+        </div>
+      </section>
+      <aside>
+        <div class="content-wrapper">
+          <div class="form-description">
+            <h3>Want to join the next retreat?</h3>
+            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          </div>
+        </div>
+        <div class="form">
+          <h3 class="Find out more">
+            <input type="text" name="name" value="name@email.com">
+            <input type="button" name="name" value="Download Itinerary">
+          </h3>
+        </div>
+      </aside>
+    </main>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+            <div class="contact">
+              <address>
+                <p>
+                  555-555-5555<br>
+              hello@unplugged.com
+                </p>
+              </address>
+            </div>
+          </div>
+          <div class="social-links">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://twitter.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="_blank"></p>
+              </div>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
-
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () {
+        ga.q.push(arguments);
+      };
+      ga.q = [];
+      ga.l = +new Date();
+      ga("create", "UA-XXXXX-Y", "auto");
+      ga("set", "anonymizeIp", true);
+      ga("set", "transport", "beacon");
+      ga("send", "pageview");
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </body>
 </html>
