--- a/about/index.html
+++ b/about/index.html
@@ -52,11 +52,55 @@
         </div>
         <div class="form">
           <h3 class="Find out more">
-            <input type="text" name="name" value="name@email.com">
+            <input type="text" name="name" value="" placeholder="name@email.com">
             <input type="button" name="name" value="Download Itinerary">
           </h3>
         </div>
       </aside>
+
+      <section class="features">
+        <div class="content-wrapper">
+
+            <h2>Have the work week you always dreamed of - without the bad wifi</h2>
+            <div class="features-items">
+              <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+              </article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+              <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+              </article>
+              <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">5 outdoor obstacle courses, including private beach &#189  mile from bungalow.</p>
+              </article>
+              <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
+              </article>
+              <article>
+                <p class="fontawesome-icon"></p>
+                <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+              </article>
+            </div>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="content-wrapper">
+  <article>
+    <h2>Be a better team in 5 days, like these.</h2>
+    <img src="#" alt="">
+  </article>
+            <div>
+    <h3>LaCrue Bottling Co. October 2022</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eum quas minima libero dicta nemo similique. Vel consequatur ipsa in obcaecati, accusamus quae blanditiis enim qui, animi reiciendis dolores molestias. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore magni sed ipsa, accusantium labore ipsam, dolores officiis reiciendis expedita natus debitis provident! Fuga velit dicta repellendus, perspiciatis doloremque aut ea.</p>
+  </div>
+  </div>
+</section>
+
     </main>
     <footer>
       <div class="content-wrapper">
@@ -70,7 +114,7 @@
               </address>
             </div>
           </div>
-          <div class="social-links">
+          <div class="social">
             <h4>Social</h4>
             <div class="social-icons">
               <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
@@ -80,7 +124,9 @@
 
           </div>
         </div>
-      </div>
+        <div class="copyright">
+          Copyright 2022 | Unplugged
+        </div>
     </footer>
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
