Added About page

--- a/about/index.html
+++ b/about/index.html
@@ -1,149 +1,126 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="manifest" href="../site.webmanifest" />
-    <link rel="apple-touch-icon" href="../icon.png" />
-    <!-- Place favicon.ico in the root directory -->
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
 
-    <link rel="stylesheet" href="../css/normalize.css" />
-    <link rel="stylesheet" href="../css/main.css" />
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
-    <meta name="theme-color" content="#fafafa" />
-    <title></title>
-  </head>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
-  <body>
-    <!-- Add your site or application content here -->
-    <header>
-      <div>
-        <a href="#"> <img src="" alt="unplugged logo" /></a>
-        <div class="header-divider"></div>
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+  <header>
+    <div>
+      <a href="#"> <img src="" alt="unplugged logo" /></a>
+      <div class="header-divider"></div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+        <li><a href="about/index.html" target="_blank">About</a></li>
+      </ul>
+    </nav>
+  </header>
+<main>
+  <section class="mission">
+    <div class="content-wrapper">
+      <div class="mission-content">
+        <h3>
+          Our Mission - we want to make you the team you always wanted to be.
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad placeat atque doloribus laborum officia dicta! Fugiat facere vel sequi fugit optio quis ullam, quisquam odit, a provident laudantium. Omnis, voluptatibus?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut optio amet reprehenderit aliquid sed placeat tempore hic et, dolores ut id eligendi molestias repellat dolore, eum beatae, quibusdam fugiat? Dolores!</p>
       </div>
-      <nav>
-        <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="hero-area">
-        <div class="content-wrapper">
-          <h1>Retreat from the desk, return refreshed.</h1>
+    </div> <!-- mission content wrapper ends here -->
+  </section>
+  <!-- Map Section -->
+  <section class="map">
+    <figure>
 
+    </figure>
+  </section>
+  <section class="contact-section">
+    <div class="content-wrapper">
+      <h2>Contact us, because you all need this.</h2>
+      <div class="contact-content">
+        <div>
+        <h4>General Information</h4>
+        <address>
+          <p>
+            333 Main St, Lake Geneva, WI 53147<br>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </address>
+      </div>
+        <div>
+          <h4>Chat with a Facilitator</h4>
+          <address>
+            <p>
+              555-555-5556<br>
+              facilitator@unplugged.com
+            </p>
+          </address>
         </div>
-      </section>
-      <aside>
-        <div class="content-wrapper">
-          <div class="form-description">
-            <h3>Want to join the next retreat?</h3>
-            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <!-- contact-content div ends -->
+      </div>
+      <!-- contact content wrapper ends -->
+      </div>
+  </section>
+</main>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+          <div class="contact">
+            <address>
+              <p>
+                555-555-5555<br>
+            hello@unplugged.com
+              </p>
+            </address>
           </div>
         </div>
-        <div class="form">
-          <h3 class="Find out more">
-            <input type="text" name="name" value="" placeholder="name@email.com">
-            <input type="button" name="name" value="Download Itinerary">
-          </h3>
-        </div>
-      </aside>
-
-      <section class="features">
-        <div class="content-wrapper">
-
-            <h2>Have the work week you always dreamed of - without the bad wifi</h2>
-            <div class="features-items">
-              <article>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-              </article>
-              <p class="fontawesome-icon"></p>
-              <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-              <article>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-              </article>
-              <article>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">5 outdoor obstacle courses, including private beach &#189  mile from bungalow.</p>
-              </article>
-              <article>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
-              </article>
-              <article>
-                <p class="fontawesome-icon"></p>
-                <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-              </article>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://twitter.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"></p>
             </div>
         </div>
-      </section>
-      <section class="reviews">
-        <div class="content-wrapper">
-  <article>
-    <h2>Be a better team in 5 days, like these.</h2>
-    <img src="#" alt="">
-  </article>
-            <div>
-    <h3>LaCrue Bottling Co. October 2022</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eum quas minima libero dicta nemo similique. Vel consequatur ipsa in obcaecati, accusamus quae blanditiis enim qui, animi reiciendis dolores molestias. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore magni sed ipsa, accusantium labore ipsam, dolores officiis reiciendis expedita natus debitis provident! Fuga velit dicta repellendus, perspiciatis doloremque aut ea.</p>
-  </div>
-  </div>
-</section>
+      </div>
+      <div class="copyright">
+        Copyright 2022 | Unplugged
+      </div>
+  </footer>
+  <!-- Add your site or application content here -->
 
-    </main>
-    <footer>
-      <div class="content-wrapper">
-        <div class="footer-content">
-            <div class="contact">
-              <address>
-                <p>
-                  555-555-5555<br>
-              hello@unplugged.com
-                </p>
-              </address>
-            </div>
-          </div>
-          <div class="social">
-            <h4>Social</h4>
-            <div class="social-icons">
-              <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-              <p><a href="https://twitter.com/yoursite" target="_blank"></a></p>
-              <p><a href="https://www.instagram.com/yoursite" target="_blank"></p>
-              </div>
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
-          </div>
-        </div>
-        <div class="copyright">
-          Copyright 2022 | Unplugged
-        </div>
-    </footer>
-    <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="../js/plugins.js"></script>
-    <script src="../js/main.js"></script>
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+</body>
 
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga = function () {
-        ga.q.push(arguments);
-      };
-      ga.q = [];
-      ga.l = +new Date();
-      ga("create", "UA-XXXXX-Y", "auto");
-      ga("set", "anonymizeIp", true);
-      ga("set", "transport", "beacon");
-      ga("send", "pageview");
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
-  </body>
 </html>
